examples/rejections/test/dfx_generated/some_service/some_service.did.d.ts
import type { Principal } from '@dfinity/principal';
export interface _SERVICE {
    accept: () => Promise<boolean>;
    error: () => Promise<never>;
    reject: (arg_0: string) => Promise<never>;
}
